fix white space created by header

--- a/ui/stylesheets/admin.less
+++ b/ui/stylesheets/admin.less
@@ -2,6 +2,18 @@ body.bp3-dark {
   background-color: #30404d;
 }
 
+.navbar {
+  display: flex;
+  background-color: #30404d;
+  align-items: center;
+  justify-content: space-between;
+  padding-right: 1rem;
+
+  * {
+    color: white;
+  }
+}
+
 .admin {
   height: 100%;
   width: 100%;
